--- a/DataYFinance.ipynb
+++ b/DataYFinance.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NBdMoUe-YYqxRM0sEDdnoMK5_q5YlWq1",
-      "authorship_tag": "ABX9TyPzf9Z6VXBJNbgLez0kn7H2"
+      "authorship_tag": "ABX9TyPxbNgoFfZdpznuOpM4Svjk"
     },
     "kernelspec": {
       "name": "python3",
@@ -197,12 +197,135 @@
       "source": [
         "from datacnn import crear_data_entrada\n",
         "\n",
-        "x, y= crear_data_entrada (PreciosCierre)\n"
+        "x, y= crear_data_entrada (PreciosCierre)\n",
+        "print (x)"
       ],
       "metadata": {
-        "id": "NGHgRm4tMeNE"
+        "id": "NGHgRm4tMeNE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec9c89df-af62-40b2-da3d-56bc9735ba13"
       },
-      "execution_count": 19,
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 525.21801758]\n",
+            " [ 558.35705566]\n",
+            " [ 573.70489502]\n",
+            " [ 570.03497314]\n",
+            " [ 570.03497314]\n",
+            " [ 575.7791748 ]\n",
+            " [ 557.54925537]\n",
+            " [ 540.34649658]\n",
+            " [ 524.95874023]\n",
+            " [ 533.05651855]\n",
+            " [ 556.87109375]\n",
+            " [ 546.49957275]\n",
+            " [ 537.34002686]\n",
+            " [          nan]\n",
+            " [ 532.10998535]\n",
+            " [ 520.51000977]\n",
+            " [ 625.60998535]\n",
+            " [ 618.25      ]\n",
+            " [ 608.41998291]\n",
+            " [ 710.80999756]\n",
+            " [ 742.59997559]\n",
+            " [ 758.88000488]\n",
+            " [ 742.95001221]\n",
+            " [ 697.77001953]\n",
+            " [ 744.95001221]\n",
+            " [ 693.01000977]\n",
+            " [ 735.7199707 ]\n",
+            " [ 692.09997559]\n",
+            " [ 768.78997803]\n",
+            " [ 767.04998779]\n",
+            " [ 777.28997803]\n",
+            " [ 784.53997803]\n",
+            " [ 758.03997803]\n",
+            " [ 771.82000732]\n",
+            " [ 796.78997803]\n",
+            " [ 823.21002197]\n",
+            " [ 829.55999756]\n",
+            " [ 905.96002197]\n",
+            " [ 964.85998535]\n",
+            " [ 908.72998047]\n",
+            " [ 930.5       ]\n",
+            " [ 939.33001709]\n",
+            " [ 959.10998535]\n",
+            " [1016.64001465]\n",
+            " [1021.40997314]\n",
+            " [1046.40002441]\n",
+            " [1169.93994141]\n",
+            " [1104.72998047]\n",
+            " [1031.79003906]\n",
+            " [1017.33001709]\n",
+            " [1084.98999023]\n",
+            " [1115.65002441]\n",
+            " [1217.26000977]\n",
+            " [1218.18994141]\n",
+            " [1193.4699707 ]\n",
+            " [1076.77001953]\n",
+            " [1094.43005371]\n",
+            " [1035.60998535]\n",
+            " [1116.36999512]\n",
+            " [1119.92004395]\n",
+            " [1173.31005859]\n",
+            " [1188.47998047]\n",
+            " [1103.63000488]\n",
+            " [1080.91003418]\n",
+            " [1216.68005371]\n",
+            " [1188.09997559]\n",
+            " [1219.        ]\n",
+            " [1260.10998535]\n",
+            " [1304.95996094]\n",
+            " [1337.02001953]\n",
+            " [1434.22998047]\n",
+            " [1339.32995605]\n",
+            " [1162.81005859]\n",
+            " [1348.66003418]\n",
+            " [1428.92004395]\n",
+            " [1413.60998535]\n",
+            " [1482.95996094]\n",
+            " [1634.18005371]\n",
+            " [1469.59997559]\n",
+            " [1621.01000977]\n",
+            " [1760.73999023]\n",
+            " [1751.88000488]\n",
+            " [1835.73999023]\n",
+            " [2036.85998535]\n",
+            " [2068.62988281]\n",
+            " [2410.12011719]\n",
+            " [2411.56005859]\n",
+            " [2506.32006836]\n",
+            " [2704.41992188]\n",
+            " [2909.23999023]\n",
+            " [2665.31005859]\n",
+            " [2965.40991211]\n",
+            " [2849.04003906]\n",
+            " [2893.59008789]\n",
+            " [2713.9699707 ]\n",
+            " [2697.82006836]\n",
+            " [2792.98999023]\n",
+            " [2299.33007812]\n",
+            " [2330.31005859]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_tensor = torch.from_numpy(x).float()\n",
+        "y_tensor = torch.from_numpy(y).float().unsqueeze(dim=1)"
+      ],
+      "metadata": {
+        "id": "8C09L73948CG"
+      },
+      "execution_count": 23,
       "outputs": []
     }
   ]
