--- a/DataYFinance.ipynb
+++ b/DataYFinance.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NBdMoUe-YYqxRM0sEDdnoMK5_q5YlWq1",
-      "authorship_tag": "ABX9TyOFHc1hMz9fsdHC0uxIYmpr",
+      "authorship_tag": "ABX9TyMrC9IKqjzUVXdGY1xb02eA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,40 +73,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Instalar Torch y numpy"
-      ],
-      "metadata": {
-        "id": "oV3AtTtaAP0q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install torch"
-      ],
-      "metadata": {
-        "id": "3KYmn_mbIFQs",
-        "outputId": "3295c014-5370-47dd-931c-a9d33aa19d22",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.7/dist-packages (1.11.0+cu113)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch) (4.1.1)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Obtener los precios desde una fecha de inicio hasta el día de hoy"
       ],
       "metadata": {
@@ -118,11 +84,11 @@
       "source": [
         "import yfinance as yahooFinance\n",
         "import datetime\n",
-        "starDate = datetime.datetime (2018, 1, 1)\n",
-        "endDate = datetime.datetime.now()\n",
-        "VALID_START = datetime.datetime (2019,12,31)\n",
-        "dataM = yahooFinance.download(\"GOOG\",start = starDate, end=endDate, interval = \"1mo\", auto_adjust = True)\n",
-        "valid_size = dataM.loc[VALID_START:endDate].shape[0]\n",
+        "fechaInicio = datetime.datetime (2018, 1, 1)\n",
+        "fechaFin = datetime.datetime.now()\n",
+        "fechaInicioVal = datetime.datetime (2019,12,31)\n",
+        "dataM = yahooFinance.download(\"GOOG\",start = fechaInicio, end=fechaFin, interval = \"1mo\", auto_adjust = True)\n",
+        "rangoValid = dataM.loc[fechaInicioVal:fechaFin].shape[0]\n",
         "\n",
         "print (dataM)"
       ],
@@ -131,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSnYiYAL8IgX",
-        "outputId": "d98efeec-b4b5-4952-a1bc-47c5763447ba"
+        "outputId": "6961e103-1e6a-4999-be6e-fe168ab45d8a"
       },
       "execution_count": 5,
       "outputs": [
@@ -221,9 +187,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5953c41-3e59-42bd-ff9a-c85c5947a3cc"
+        "outputId": "16cdfda7-e036-43e9-b279-286c761d1f1b"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,39 +213,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Permitir que los archivos en drive trabajen dentro de colab"
+        "Instalar Torch"
       ],
       "metadata": {
-        "id": "ZkcE9C4FA5aG"
+        "id": "oV3AtTtaAP0q"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/drive/MyDrive/Colab Notebooks/"
+        "pip install torch"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ckvw4H84CCY1",
-        "outputId": "9a8f4e14-d8c5-4716-8a8c-7825dbe654b4"
+        "id": "3KYmn_mbIFQs"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/Colab Notebooks\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Importar herramientas de Torch"
+        "Importar herramientas de Torch y Numpy"
       ],
       "metadata": {
         "id": "XSEsMOWR7QM8"
@@ -300,8 +254,40 @@
       "metadata": {
         "id": "8RxjnNBU_PBw"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Permitir que los archivos en drive trabajen dentro de colab"
+      ],
+      "metadata": {
+        "id": "ZkcE9C4FA5aG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/drive/MyDrive/Colab Notebooks/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ckvw4H84CCY1",
+        "outputId": "1dd4ea3f-5d83-4118-e87f-5da04f381942"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/Colab Notebooks\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -320,7 +306,7 @@
       "metadata": {
         "id": "SgjQ5AHgAcHV"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -352,9 +338,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8129e6c6-8c18-4f10-fcaf-f928c17e05d6"
+        "outputId": "021cb580-76dc-49ec-b131-2875f1dec61e"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +475,7 @@
         "BATCH_SIZE= 5\n",
         "\n",
         "dataset = TensorDataset(x_tensor, y_tensor)\n",
-        "valid_ind = len (x) - valid_size\n",
+        "valid_ind = len (x) - rangoValid\n",
         "\n",
         "train_dataset = Subset(dataset, list(range(valid_ind)))\n",
         "valid_dataset = Subset(dataset, list(range(valid_ind, len(x))))\n",
