--- a/DataYFinance.ipynb
+++ b/DataYFinance.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NBdMoUe-YYqxRM0sEDdnoMK5_q5YlWq1",
-      "authorship_tag": "ABX9TyMurXwIH0CStCtQ+HpwaQjn",
+      "authorship_tag": "ABX9TyOjeWIWEoBZAjpL6NYRUxOf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         },
         "outputId": "491210e9-c30e-4464-cb68-b8244c6d20f8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,54 +73,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "-5JE7Rmy7dY9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c90673f1-88bf-4d37-c2b4-ef031f0cc4b9"
+        "id": "-5JE7Rmy7dY9"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting yfinance\n",
-            "  Downloading yfinance-0.1.72-py2.py3-none-any.whl (27 kB)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.21.6)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.10)\n",
-            "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.3.5)\n",
-            "Collecting lxml>=4.5.1\n",
-            "  Downloading lxml-4.9.1-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (6.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.4 MB 17.5 MB/s \n",
-            "\u001b[?25hCollecting requests>=2.26\n",
-            "  Downloading requests-2.28.1-py3-none-any.whl (62 kB)\n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->yfinance) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->yfinance) (2022.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas>=0.24.0->yfinance) (1.15.0)\n",
-            "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2.1.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2022.6.15)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (1.24.3)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2.10)\n",
-            "Installing collected packages: requests, lxml, yfinance\n",
-            "  Attempting uninstall: requests\n",
-            "    Found existing installation: requests 2.23.0\n",
-            "    Uninstalling requests-2.23.0:\n",
-            "      Successfully uninstalled requests-2.23.0\n",
-            "  Attempting uninstall: lxml\n",
-            "    Found existing installation: lxml 4.2.6\n",
-            "    Uninstalling lxml-4.2.6:\n",
-            "      Successfully uninstalled lxml-4.2.6\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires requests~=2.23.0, but you have requests 2.28.1 which is incompatible.\n",
-            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\u001b[0m\n",
-            "Successfully installed lxml-4.9.1 requests-2.28.1 yfinance-0.1.72\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "pip install yfinance"
       ]
@@ -154,7 +111,7 @@
         "id": "oSnYiYAL8IgX",
         "outputId": "ee5285c5-6f91-40a4-aeb2-bcb037b67368"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +202,7 @@
         },
         "outputId": "6507097b-d8d0-4161-ebb9-39bb85f873d8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +245,7 @@
         },
         "outputId": "5cbf502e-d572-418c-bc4a-446187a33876"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +287,7 @@
       "metadata": {
         "id": "8RxjnNBU_PBw"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +311,7 @@
         "id": "ckvw4H84CCY1",
         "outputId": "401f6c31-d5a6-4a45-d64e-119e35c764ca"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +339,7 @@
       "metadata": {
         "id": "SgjQ5AHgAcHV"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,18 +392,18 @@
         "dataset = TensorDataset(xTensor, yTensor)\n",
         "rangoBase = len (x) - rangoValida\n",
         "\n",
-        "trainDataset = Subset(dataset, list(range(rangoBase)))\n",
-        "validDataset = Subset(dataset, list(range(rangoBase, len(x))))\n",
+        "entrenarDataset = Subset(dataset, list(range(rangoBase)))\n",
+        "validarDataset = Subset(dataset, list(range(rangoBase, len(x))))\n",
         "\n",
-        "trainLoader = DataLoader(dataset=trainDataset,\n",
+        "cargaEntreno = DataLoader(dataset=entrenarDataset,\n",
         "                          batch_size=BATCH_SIZE)\n",
-        "validLoader = DataLoader(dataset=validDataset, \n",
+        "cargaValidar = DataLoader(dataset=validarDataset, \n",
         "                          batch_size=BATCH_SIZE)\n"
       ],
       "metadata": {
         "id": "zXjdXXElelWp"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +441,7 @@
         },
         "outputId": "5e1d5843-23d9-47a5-b1e0-2c8bee26accb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,47 +496,54 @@
       "cell_type": "code",
       "source": [
         "ImprimirCada = 50\n",
-        "train_losses, valid_losses = [], []\n",
+        "entrenarPerdida, validarPerdida = [], []\n",
         "\n",
         "for epoch in range(NumCiclos):\n",
-        "  running_loss_train = 0\n",
-        "  running_loss_valid = 0\n",
-        "model.train()\n",
-        "for x_batch, y_batch in train_loader:\n",
-        "    optimizer.zero_grad()\n",
-        "    x_batch = x_batch.to(device)\n",
-        "    x_batch = x_batch.view(x_batch.shape[0], 1, NumRezago)\n",
-        "    y_batch = y_batch.to(device)\n",
-        "    y_batch = y_batch.view(y_batch.shape[0], 1, 1)\n",
-        "    y_hat = model(x_batch).view(y_batch.shape[0], 1, 1)\n",
-        "    loss = torch.sqrt(lossFn(y_batch, y_hat))\n",
-        "    loss.backward()\n",
-        "    optimizer.step()\n",
-        "    running_loss_train += loss.item() * x_batch.size(0)\n",
-        "  epoch_loss_train = running_loss_train /\n",
-        "len(train_loader.dataset)\n",
-        "  train_losses.append(epoch_loss_train)\n",
-        "  with torch.no_grad():\n",
-        "    model.eval()\n",
-        "    for x_val, y_val in valid_loader:\n",
-        "    x_val = x_val.to(device)\n",
-        "    x_val = x_val.view(x_val.shape[0], 1, NumResago)\n",
-        "    y_val = y_val.to(device)\n",
-        "    y_val = y_val.view(y_val.shape[0], 1, 1)\n",
-        "    y_hat = model(x_val).view(y_val.shape[0], 1, 1)\n",
-        "    loss = torch.sqrt(loss_fn(y_val, y_hat))\n",
-        "    running_loss_valid += loss.item() * x_val.size(0)\n",
-        "  epoch_loss_valid = running_loss_valid /\n",
-        "len(valid_loader.dataset)\n",
-        "  if epoch > 0 and epoch_loss_valid < min(valid_losses):\n",
-        "    mejorCiclo = ciclo\n",
-        "    torch.save(model.state_dict(), './cnn_checkpoint.pth')\n",
-        "  valid_losses.append(epoch_loss_valid)\n",
-        " \n",
-        "  if epoch % PRINT_EVERY == 0:\n",
-        "    print(f\"<{epoch}> – Train. loss: {epoch_loss_train:.6f} \\t\n",
-        "Valid.loss: {epoch_loss_valid:.6f}\")\n",
-        "print(f'Menor perdida registrada en los ciclos: {mejorCiclo}')"
+        "    ejecutarEntrenarPerdida = 0\n",
+        "    ejecutarValidarPerdida = 0\n",
+        "\n",
+        "    model.train()\n",
+        "    \n",
+        "    for x_batch, y_batch in cargaEntreno:\n",
+        "        \n",
+        "        optimizer.zero_grad()\n",
+        "        \n",
+        "        x_batch = x_batch.to(device)\n",
+        "        x_batch = x_batch.view(x_batch.shape[0], 1, NumRezago)\n",
+        "        y_batch = y_batch.to(device)\n",
+        "        y_batch = y_batch.view(y_batch.shape[0], 1, 1)\n",
+        "        y_hat = model(x_batch).view(y_batch.shape[0], 1, 1)\n",
+        "        loss = torch.sqrt(lossFn(y_batch, y_hat))\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        ejecutarEntrenarPerdida += loss.item() * x_batch.size(0)\n",
+        "        \n",
+        "    epoch_loss_train = ejecutarEntrenarPerdida / len(cargaEntreno.dataset)\n",
+        "    entrenarPerdida.append(epoch_loss_train)\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        model.eval()\n",
+        "        for x_val, y_val in cargaValidar:\n",
+        "            x_val = x_val.to(device)\n",
+        "            x_val = x_val.view(x_val.shape[0], 1, NumRezago)\n",
+        "            y_val = y_val.to(device)\n",
+        "            y_val = y_val.view(y_val.shape[0], 1, 1)\n",
+        "            y_hat = model(x_val).view(y_val.shape[0], 1, 1)\n",
+        "            loss = torch.sqrt(lossFn(y_val, y_hat))\n",
+        "            ejecutarValidarPerdida += loss.item() * x_val.size(0)\n",
+        "            \n",
+        "        epoch_loss_valid = ejecutarValidarPerdida / len(cargaValidar.dataset)\n",
+        "            \n",
+        "        if epoch > 0 and epoch_loss_valid < min(validarPerdida):\n",
+        "            best_epoch = epoch\n",
+        "            torch.save(model.state_dict(), './cnn_checkpoint.pth')\n",
+        "            \n",
+        "        validarPerdida.append(epoch_loss_valid)\n",
+        "\n",
+        "    if epoch % ImprimirCada == 0:\n",
+        "        print(f\"<{epoch}> - Train. loss: {epoch_loss_train:.6f} \\t Valid. loss: {epoch_loss_valid:.6f}\")\n",
+        "        \n",
+        "print(f'Menor error encontrado en los ciclos: {best_epoch}')"
       ],
       "metadata": {
         "id": "XQMCd5ppqCB-"
